<resources>
    <string name="app_name">ShowBee</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="show_bee">Show Bee</string>
    <string name="fg_cal_mon">2020년 07월</string>
    <string name="fg_cal_pre">P</string>
    <string name="fg_cal_next">N</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="income">수입</string>
    <string name="income2">310,000원</string>
    <string name="expense">지출</string>
    <string name="expense2">300,000원</string>
    <string name="title">제목</string>
    <string name="choice_day">날짜</string>
    <string name="category">분류</string>
    <string name="repetition">반복</string>
    <string name="price">금액</string>
    <string name="notification">알림</string>
    <string name="add_friend">친구추가</string>
    <string name="memo">메모</string>
    <string name="choice_day2">날짜를 선택해주세요.</string>
    <string name="fixed_expenditure">고정 지출</string>
    <string name="financial">가계부</string>
    <string name="my_account">나의 계정</string>
    <string name="manage_friends">친구 관리</string>
    <string name="terms_of_use">이용약관</string>
    <string name="contact_us">문의하기</string>
    <string name="sign_out">로그아웃</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="modification_of_personal_information">개인 정보 수정</string>
    <string name="change_nickname">닉네임 변경</string>
    <string name="change_userinfo">사용자 정보 변경</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="nickname">닉네임</string>
    <string name="text_management">문자 관리</string>
    <string name="sms_receiving_function">SMS 수신 기능</string>
    <string name="display_text_source">문자 원본 표시</string>
    <string name="classification_management">분류 관리</string>
    <string name="manage_categories">카테고리 관리</string>
    <string name="large_categories_management">대분류 관리</string>
    <string name="subclassification_management">소분류 관리</string>
    <string name="always_show">항상 표시</string>
    <string name="always_hide">항상 숨김</string>
    <string name="hobby">취미</string>
    <string name="life">생활</string>
    <string name="transfer">이체</string>
    <string name="etc">기타</string>
    <string name="ott">OTT</string>
    <string name="music">음악</string>
    <string name="book">독서</string>
    <string name="exercise">운동</string>
    <string name="phone">통신비</string>
    <string name="home">생활비</string>
    <string name="desposit">예금</string>
    <string name="savings">적금</string>
    <string name="installment">할부</string>
    <string name="emailCheck">확인</string>
    <string name="log_out_cancel">취소</string>
    <string name="log_out_title">로그아웃하시겠습니까?</string>
    <string name="withdrawal_title">회원탈퇴하시겠습니까?</string>
    <string name="withdrawal_content">탈퇴하면 회원님의 모든 정보가 사라집니다.</string>
    <string name="userEmail">이메일</string>
    <string name="userPassword">비밀번호</string>
    <string name="userPasswordCheck">비밀번호 확인</string>
    <string name="delete">삭제하기</string>
    <string name="save">저장하기</string>
    <string name="create">추가하기</string>
    <string name="bank">자산</string>
    <string name="amount">금액</string>
    <string name="content">내용</string>
    <string name="bank2">농협</string>
    <string name="amount2">4,350원</string>
    <string name="content2">CU제주시청점</string>
    <string name="category2">식비</string>
    <string name="search_email">이메일 검색</string>
    <string name="added_friends_text">추가된 친구</string>
    <string name="joined_schedules_text">참여 중인 일정</string>
    <string name="date2">3.2</string>
    <string name="details_terms_of_service">이용약관</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="details">
        <b>이용약관</b> \n\n

        <b>제 1 조 (목적)</b> \n
        쇼비(이하 ‘회사’)가 제공하는 서비스를 이용해 주셔서 감사합니다. 이 약관은 회사에서 제공하는 모바일 서비스(이하 ‘서비스’)를 이용함에 있어 이용자의 권리·의무 및 책임사항을 규정함을 목적으로 합니다. \n\n

        <b>제 2 조 (약관의 효력 및 변경)</b> \n
        1. 본 약관의 내용은 서비스의 화면에 게시하거나 기타의 방법으로 공지하고, 본 약관에 동의한 모두에게 그 효력이 발생합니다. \n
        2. 회사는 필요한 경우 관련법령을 위배하지 않는 범위 내에서 본 약관을 변경할 수 있습니다. 본 약관이 변경되는 경우 회사는 변경사항을 시행일자 15일 전부터 이용자에게 서비스 공지사항에서 공지 또는 통지하는 것을 원칙으로 합니다. 피치 못하게 이용자에게 불리한 내용으로 변경할 경우에는 그 시행일자 30일 전부터 계정에 등록된 이메일 주소로 이메일 발송 또는 서비스 내 알림 메시지를 띄우는 등의 별도의 전자적 수단으로 개별적으로 알려 드리겠습니다. \n
        3. 회사가 전 항에 따라 공지 또는 통지를 하면서 공지 또는 통지일로부터 개정약관 시행일 7일 후까지 거부의사를 표시하지 아니하면 승인한 것으로 본다는 뜻을 명확하게 고지하였음에도 이용자의 의사표시가 없는 경우에는 변경된 약관을 승인한 것으로 봅니다. \n
        4. 이용자는 변경된 약관에 대하여 거부의사를 표시함으로써 이용계약의 해지를 선택할 수 있습니다. \n
        5. 본 약관은 이용자가 본 약관에 동의한 날로부터 본 약관 제 조에 따른 이용계약의 해지 시까지 적용하는 것을 원칙으로 합니다. 단, 본 약관의 일부 조항은 이용계약의 해지 후에도 유효하게 적용될 수 있습니다. \n\n

        <b>제 3 조 (약관 외 준칙)</b> \n
        본 약관은 규정되지 않은 사항에 대해서는 관련 법령 또는 서비스의 이용약관, 운영정책 및 규칙 등(이하 ‘세부지침’)의 규정에 따릅니다. \n\n

        <b>제 4 조 (정의)</b> \n
        본 약관에서 사용하는 용어의 정의는 다음과 같습니다. \n
        1. 이용자 : 서비스에서 본 약관을 동의하고, 서비스를 이용하는 자를 말합니다. \n
        2. 서비스 : 회사에서 제공하는 모바일 서비스를 말합니다. \n\n

        <b>제 5 조 (서비스 이용계약의 성립)</b> \n
        1. 서비스를 사용하기 위해 계정을 먼저 생성하시기 바랍니다. \n
        2. 서비스 이용계약은 이용자가 본 약관의 내용에 동의한 후 회사가 여러분의 계정 정보 등을 확인한 후 승낙함으로써 체결됩니다. \n\n

        <b>제 6 조 (서비스 가입의 제한)</b> \n
        1. 제5조에 따른 가입 신청자에게 회사는 원칙적으로 서비스 가입을 승낙합니다. 다만, 회사는 아래 각 호의 경우에는 그 사유가 해소될 때까지 승낙을 유보하거나 승낙하지 않을 수 있습니다. \n
        \t a. 다른 이용자의 이메일 주소를 이용하여 서비스에 가입하려고 한 경우 \n
        \t b. 서비스 제공 설비 용량에 현실적인 여유가 없는 경우 \n
        \t c. 서비스 제공을 위한 기술적인 부분에 문제가 있다고 판단되는 경우 \n
        \t d. 기타 관련 법령에 위배되거나 세부지침 등 회사가 정한 기준에 반하는 경우 \n\n
        2. 만약, 이용자가 위 조건에 위반하여 통합서비스에 가입한 것으로 판명된 때에는 회사는 즉시 여러분의 서비스 이용을 정지시키거나 계정을 삭제하는 등 적절한 제한을 할 수 있습니다. \n\n

        <b>제 7 조 (서비스의 제공)</b> \n
        1. 서비스 이용계약이 성립되면, 이용자는 서비스를 원하는 때에 자유롭게 이용할 수 있다. \n
        2. 이용자는 스마트폰의 어플리케이션 스토어 등에서 서비스를 다운받아 설치하여  서비스를 이용할 수 있습니다. \n
        3. 회사는 더 나은 서비스를 위하여 서비스에 필요한 소프트웨어의 업데이트 버전을 제공할 수 있습니다. 소프트웨어의 업데이트에는 중요한 기능의 추가 또는 불필요한 기능의 제거 등이 포함되어 있습니다. \n
        4. 회사는 더 나은 서비스의 제공을 위하여 이용자에게 서비스의 이용과 관련된 각종 고지, 관리 메시지 및 기타 광고를 비롯한 다양한 정보를 서비스 내에 표시하거나 이용자의 계정 정보에 등록되어 있는 메일로 직접 발송할 수 있습니다. 단, 광고성 정보 전송의 경우에는 사전에 수신에 동의한 경우에만 전송합니다. \n\n

        <b>제 8 조 (서비스의 변경 및 종료)</b> \n
        1. 회사는 아래 각 호의 경우 서비스의 전부 또는 일부를 제한하거나 중지할 수 있습니다. \n
        \t a. 서비스용 설비의 유지·보수 등을 위한 정기 또는 임시 점검의 경우 \n
        \t b. 정전, 제반 설비의 장애 등으로 정상적인 서비스 이용에 지장이 있는 경우 \n
        \t c. 회사의 사정으로 서비스의 전부 또는 일부를 유지할 수 없는 경우 \n
        \t d. 기타 천재지변, 국가비상사태 등 불가항력적 사유가 있는 경우 \n
        2. 전항에 의한 서비스 중단의 경우에는 제 7조에서 정한 방법으로 이용자에게 통지 내지 공지하겠습니다. 이 때 원만한 서비스 및 정책 변경 등을 위하여 서비스 이용 시 재로그인 또는 추가적인 동의 절차 등이 필요할 수 있습니다. 다만, 회사로서도 예측할 수 없거나 통제할 수 없는 사유(회사의 과실이 없는 디스크 내지 서버 장애, 시스템 다운 등)로 인해 사전 통지 내지 공지가 불가능한 경우에는 그러하지 아니합니다. \n\n

        <b>제 9 조 (이용계약 해지)</b> \n
        1. 이용자가 회원탈퇴를 하는 경우 서비스 이용계약도 자동으로 해지됩니다. \n
        2. 서비스 이용계약이 해지되면 관련 법령 및 개인정보 처리방침에 따라 이용자의 모든 데이터는 삭제됩니다. \n
        3. 서비스 이용계약이 해지된 경우라도 이용자는 다시 회사에 대하여 이용계약의 체결을 신청할 수 있습니다. 다만, 이용자가 관련 법령, 본 약관 및 세부지침을 준수하지 않아 서비스의 이용이 중단된 상태에서 이용게약을 해지한 후 다시 이용계약 체결을 신청하는 경우에는 서비스 가입에 일정기간 제한이 있을 수 있습니다. \n\n

        <b>제 10 조 (개인정보의 보호)</b> \n
        이용자의 개인정보는 서비스의 원활한 제공을 위하여 이용자가 동의한 목적과 범위 내에서만 이용됩니다. 관련 법령에 의하거나 이용자가 별도로 동의하지 아니하는 한 회사가 이용자의 개인정보를 제3자에게 제공하는 일은 결코 없습니다. 자세한 사항은 개인정보처리방침 등을 참고해 주시기 바랍니다. \n\n

        <b>제 11 조 (이용자의 의무)</b> \n
        1. 이용자의 아이디와 비밀번호에 관한 관리책임은 이용자에게 있습니다. \n
        2. 이용자는 자신의 아이디 및 비밀번호를 도난당하거나 제3자가 사용하고 있음을 인지한 경우에는 바로 회사에 통보하고 회사의 안내가 있는 경우에는 그에 따라야 합니다. \n\n

        <b>제 12 조 (통지 및 공지)</b> \n
        이용자는 문의하기를 통해 언제든지 회사에 의견을 개진할 수 있습니다. 서비스 이용자 전체에 대한 공지는 7일 이상 공지사항에 게시함으로써 효력이 발생합니다. 이용자에게 중대한 영향을 미치는 사항의 경우에는 계정에 등록된 이메일 주소로 이메일(푸시 알림에 동의한 경우 서비스 내 알림 메시지를 띄우는 등의 별도의 전자적 수단) 발송하는 방법 등으로 개별적으로 알려 드리겠습니다. \n\n

        <b>제 13 조 (분쟁해결)</b> \n
        1. 본 약관 또는 서비스는 대한민국법령에 의하여 규정되고 이행됩니다. 서비스 이용과 관련하여 회사와 이용자 간에 분쟁이 발생하면 이의 해결을 위해 성실히 협의할 것입니다. \n
        2. 회사는 이용자로부터 제출되는 불만사항 및 의견은 우선적으로 그 사항을 처리합니다. 다만, 신속한 처리가 곤란한 경우에는 이용자에게 그 사유와 처리일정을 즉시 통보해 드립니다. \n\n
    </string>
    <string name="details_public_privacy">
        <b>개인정보처리방침</b> \n\n

        <b>1. 개인정보 처리방침</b> \n
        쇼비(이하 ‘회사’)는 이용자의 ‘동의를 기반으로 개인정보를 수집·이용 및 제공’하고 있으며, ‘이용자의 권리 (개인정보 자기결정권)를 적극적으로 보장’합니다. \n
        회사는 정보통신서비스제공자가 준수하여야 하는 대한민국의 관계 법령 및 개인정보보호 규정, 가이드라인을 준수하고 있습니다. \n
        “개인정보처리방침”이란 이용자의 소중한 개인정보를 보호함으로써 이용자가 안심하고 서비스를 이용할 수 있도록 회사가 준수해야 할 지침을 의미합니다. \n\n
        본 개인정보처리방침은 회사가 제공하는 모바일 서비스(이하 ‘서비스’)에 적용됩니다. \n\n

        <b>2. 개인정보 수집</b> \n
        <b>서비스 제공을 위한 필요 최소한의 개인정보를 수집하고 있습니다.</b> \n
        회원 가입 시 또는 서비스 이용 과정에서 개별 어플리케이션을 통해 아래와 같은 서비스 제공을 위해 필요한 최소한의 개인정보를 수집하고 있습니다. \n
        1. 계정 \n
        \t <b>1. 필수</b> \n
                \t\t 이메일, 비밀번호, 이름(닉네임), 서비스 이용내역 \n\n

            \t 2. 선택 \n
                \t\t 프로필사진 \n\n

        2. 본인인증 시 \n
            \t 이름, 성별, 생년월일, 휴대폰번호, 통신사업자, 내/외국인 여부, 암호화된 이용자 확인값(CI), 중복가입확인정보(DI) \n\n

        3. 문의하기 \n
        \t <b>1. 필수</b> \n
                \t\t 전화번호, 계정(이메일) \n\n


        <b>개인정보를 수집하는 방법은 다음과 같습니다.</b> \n
        개인정보를 수집하는 경우에는 반드시 사전에 이용자에게 해당 사실을 알리고 동의를 구하고 있으며, 아래와 같은 방법을 통해 개인정보를 수집합니다. \n
        • 회원가입 및 서비스 이용 과정에서 이용자가 개인정보 수집에 대해 동의를 하고 직접 정보를 입력하는 경우 \n
        • 문의하기를 통한 상담 과정에서 웹페이지, 메일, 전화 등 \n\n

        <b>만 14세 미만 아동의 개인정보를 수집할 때 법정 대리인의 동의를 얻어 최소한의 개인정보를 수집하고 있습니다.</b> \n\n

        <b>서비스 이용과정에서 이용자로부터 수집하는 개인정보는 아래와 같습니다.</b> \n
        모바일 앱 이용 과정에서 서비스 이용 기록 등의 정보가 자동으로 생성되어 수집될 수 있습니다.\n\n

        <b>3. 개인정보 이용</b> \n
        <b>회원관리, 서비스 제공·개선, 신규 서비스 개발 등을 위해 이용합니다.</b> \n
        회원 가입 시 또는 서비스 이용 과정에서 개별 어플리케이션을 통해 아래와 같이 서비스 제공을 위해 필요한 최소한의 개인정보를 수집하고 있습니다. \n
        • 회원 식별/가입의사 확인, 본인 확인 \n
        • 만 14세 미만 아동 개인정보 수집 시 법정 대리인 동의여부 확인, 법정 대리인 권리행사 시 본인 확인 \n
        • 이용자간 친구등록 기능의 제공 \n
        • 친구에게 활동내역을 알리거나 이용자 검색, 등록 등의 기능 제공 \n
        • 신규 서비스 개발, 다양한 서비스 제공, 문의사항 또는 불만처리, 공지사항 전달 \n
        • 서비스의 원활한 운영에 지장을 주는 행위(계정 도용 및 부정 이용 행위 등 포함)에 대한 방지 및 제재 \n
        • 마케팅 및 광고 등에 활용 \n
        • 서비스 이용 기록, 서비스 이용에 대한 통계, 서비스 개선에 활용 \n\n

        <b>개인정보의 추가적인 이용 · 제공을 하는 경우가 있습니다.</b> \n
        수집 목적과 합리적으로 관련된 범위에서는 법령에 따라 이용자의 동의 없이 개인정보를 이용하거나 제3자에게 제공할 수 있으며, 이때 ‘당초 수집 목적과 관련성이 있는지, 수집한 정황 또는 처리 관행에 비추어 볼 때 개인정보의 추가적인 이용 또는 제공에 대한 예측 가능성이 있는지, 이용자의 이익을 부당하게 침해하는지, 가명처리 또는 암호화 등 안전성 확보에 필요한 조치를 하였는지’를 종합적으로 고려합니다. \n\n

        <b>4. 개인정보 제공</b> \n
        <b>회사는 이용자의 별도 동의가 있는 경우나 법령에 규정된 경우를 제외하고는 이용자의 개인정보를 제3자에게 제공하지 않습니다.</b> \n
        회사는 이용자의 사전 동의 없이 개인정보를 외부에 제공하지 않습니다. 단, 재난, 감염병, 급박한 생명 · 신체 위험을 초래하는 사건사고, 급박한 재산 손실 등의 긴급상황이 발생하는 경우 정보주체의 동의 없이 관계기관에 개인정보를 제공할 수 있습니다. \n\n

        <b>5. 개인정보 파기</b> \n
        <b>개인정보는 수집 및 이용 목적이 달성되면 지체없이 파기하며, 절차 및 방법은 다음과 같습니다.</b> \n
        수집 및 이용 목적의 달성 또는 회원 탈퇴 등 파기 사유가 발생한 개인정보는 개인정보의 형태를 고려하여 전자적 파일 형태인 경우 복구 및 재생되지 않도록 안전하게 삭제하고, 그 밖에 기록물, 인쇄물, 서면 등의 경우 분쇄하거나 소각하여 파기합니다. \n
        다만, 아래 정보는 탈퇴일부터 최대 1년간 보관 후 파기합니다. \n
        • 안내메일 발송 및 CS문의 대응을 위해 이용자 계정과 탈퇴안내 이메일 주소를 암호화하여 보관 \n\n

        또한, 회사는 ‘개인정보 유효기간제’에 따라 1년간 서비스를 이용하지 않은 회원의 개인정보를 별도로 분리 보관 또는 삭제하고 있으며, 분리 보관된 개인정보는 2년간 보관 후 지체없이 파기합니다. \n\n
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_details_terms_of_service">DetailsTermsOfServiceActivity</string>
</resources>