<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/background_dialog">

    <TextView
        android:id="@+id/text_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out_title"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997">

        <Button
            android:id="@+id/btn_logout_cancel"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_log_out_ok"
            android:text="@string/log_out_cancel"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/text_color2"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_logout"
            app:layout_constraintHorizontal_bias="0.574"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_logout_ok"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/emailCheck"
            android:textStyle="bold"
            android:background="@drawable/btn_log_out_cancel"
            android:textColor="@color/app_color3"
            android:textSize="16sp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>